# IA-APPs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  finops-scheduled.yml
finops/: __init__.py  cli.py
finops/actions/: alert_sender.py  pr_generator.py  savings_tracker.py
finops/analysis/: anomaly_detector.py  top_movers.py  unit_economics.py
finops/config/: settings.yaml
finops/config/rules/: anomaly_rules.yaml  rightsizing_rules.yaml
finops/config/schemas/: config_schema.json
finops/ingestion/: __init__.py  athena_store.py  cur_enricher.py  cur_parser.py  local_store.py
finops/recommendations/: ec2_rightsizer.py  k8s_rightsizer.py  savings_analyzer.py  storage_optimizer.py
finops/reports/: json_reporter.py  markdown_reporter.py
finops/reports/templates/: pr_body.md.j2  report.md.j2
finops/utils/: __init__.py  aws_client.py  k8s_client.py  logger.py  validators.py
infra/terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/athena/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/cur_report/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/cur_storage/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/finops/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/iam_oidc/: main.tf  outputs.tf  variables.tf
infra/terraform/scripts/: bootstrap-backend.sh
instructions/: README.md
instructions/anthropic-cookbook/: README.md
instructions/claude-code-optimization/: README.md
instructions/claude-sdks/: README.md
instructions/claudectx/: README.md
instructions/context7/: README.md
instructions/mcp-servers/: README.md
instructions/sequential-thinking/: README.md
tests/: conftest.py  test_anomaly_detector.py  test_athena_store.py  test_cur_parser.py  test_k8s_client.py  test_local_store.py  test_reports_and_actions.py  test_rightsizer.py
tests/fixtures/: sample_cur.csv  sample_metrics.json
