[project]
name = "finops-autopilot"
version = "0.1.0"
requires-python = ">=3.12"
description = "AWS cost anomaly detection, rightsizing recommendations, and automated savings."
license = { file = "License.md" }
dependencies = [
    "boto3>=1.34",
    "typer[all]>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "duckdb>=0.10",
    "jinja2>=3.1",
    "kubernetes>=29.0",
    "requests>=2.31",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[s3,sts,athena,cloudwatch,ce]>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
    "types-requests",
    "boto3-stubs[s3,sts,athena,cloudwatch,ce]",
]

[project.scripts]
finops = "finops.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID"]
ignore = ["B008"]  # typer.Option() calls in function defaults are fine

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert is expected in tests

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["finops"]
omit = ["tests/*"]
